--- a/impressionist.vcxproj
+++ b/impressionist.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="ImpressionistDoc.cpp" />
     <ClCompile Include="ImpressionistUI.cpp" />
     <ClCompile Include="LineBrush.cpp" />
+    <ClCompile Include="LineOverlay.cpp" />
     <ClCompile Include="OriginalView.cpp" />
     <ClCompile Include="PaintView.cpp" />
     <ClCompile Include="PointBrush.cpp" />
@@ -160,6 +161,7 @@
     <ClInclude Include="impressionistDoc.h" />
     <ClInclude Include="impressionistUI.h" />
     <ClInclude Include="LineBrush.h" />
+    <ClInclude Include="LineOverlay.h" />
     <ClInclude Include="OriginalView.h" />
     <ClInclude Include="PaintView.h" />
     <ClInclude Include="PointBrush.h" />
