--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="ScatteredLineBrush.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LineOverlay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ScatteredLineBrush.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LineOverlay.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
