-added random polygon brush

--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -17,6 +17,7 @@
     <ClCompile Include="LineOverlay.cpp" />
     <ClCompile Include="Marker.cpp" />
     <ClCompile Include="Convolution.cpp" />
+    <ClCompile Include="RandomPolygonBrush.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
@@ -35,5 +36,6 @@
     <ClInclude Include="Impressionist.h" />
     <ClInclude Include="Marker.h" />
     <ClInclude Include="Convolution.h" />
+    <ClInclude Include="RandomPolygonBrush.h" />
   </ItemGroup>
 </Project>
