--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="Convolution.cpp" />
     <ClCompile Include="InputTable.cpp" />
     <ClCompile Include="RandomPolygonBrush.cpp" />
+    <ClCompile Include="ConvolutionManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
@@ -39,5 +40,6 @@
     <ClInclude Include="Convolution.h" />
     <ClInclude Include="InputTable.h" />
     <ClInclude Include="RandomPolygonBrush.h" />
+    <ClInclude Include="ConvolutionManager.h" />
   </ItemGroup>
 </Project>
