Add smudge brush, improve warp brush.

--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -28,6 +28,7 @@
     <ClCompile Include="include\imgwarp\imgwarp_mls_rigid.cpp" />
     <ClCompile Include="include\imgwarp\imgwarp_mls_similarity.cpp" />
     <ClCompile Include="include\imgwarp\imgwarp_piecewiseaffine.cpp" />
+    <ClCompile Include="SmudgeBrush.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
@@ -57,5 +58,6 @@
     <ClInclude Include="include\imgwarp\imgwarp_mls_rigid.h" />
     <ClInclude Include="include\imgwarp\imgwarp_mls_similarity.h" />
     <ClInclude Include="include\imgwarp\imgwarp_piecewiseaffine.h" />
+    <ClInclude Include="SmudgeBrush.h" />
   </ItemGroup>
 </Project>
