--- a/impressionist.vcxproj
+++ b/impressionist.vcxproj
@@ -289,6 +289,7 @@
     <ClCompile Include="Marker.cpp" />
     <ClCompile Include="InputTable.cpp" />
     <ClCompile Include="SharpenBrush.cpp" />
+    <ClCompile Include="SmudgeBrush.cpp" />
     <ClCompile Include="WarpBrush.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -318,6 +319,7 @@
     <ClInclude Include="ScatteredCircleBrush.h" />
     <ClInclude Include="ScatteredLineBrush.h" />
     <ClInclude Include="ScatteredPointBrush.h" />
+    <ClInclude Include="SmudgeBrush.h" />
     <ClInclude Include="WarpBrush.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
